--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,50 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;1,100&family=PT+Sans&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "PT Sans", sans-serif;
+}
+
+.container {
+  background-color: #c5c6c7;
+  max-width: 600px;
+  margin: 50px auto;
+  overflow: auto;
+  min-height: 300px;
+  padding: 30px;
+  border-radius: 5px;
+}
+
+.container input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 20px;
+}
+
+.container textarea {
+  width: 100%;
+  height: 150px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 20px;
+}
+
+.container button {
+  display: inline-block;
+  background: #66fcf1;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 20px;
+}
