create task-details component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="container">
   <h2>{{ title }}</h2>
-  <input type="text" placeholder="New task" #task> 
+
+  <input type="text" name="task" placeholder="New task" #task> 
   <textarea name="task-description" id="task-description" rows="4" placeholder="Task description"></textarea>
   <button (click)="addNewTask(task.value)">Add Task</button>
 
   <!-- displaying the task list -->
   <ul *ngFor="let task of taskList">
-    <li>{{ task.name }} <button [ngStyle]="{ 'background-color': 'red' }" (click)="deleteTask(task.id)">Delete Task</button></li>
+    <li>{{ task.name }}<button [ngStyle]="{ 'background-color': 'red' }" (click)="deleteTask(task.id)">Delete Task</button>
+    </li> 
   </ul>
 </div>
